detail (in progress), list (in progress)

--- a/didongOren/public/detail.html
+++ b/didongOren/public/detail.html
@@ -1053,7 +1053,7 @@
 					<button><span>Add tags</span></button>
 					<form>
 				  </div>
-				  <div id="menu4"" class="tab-pane fade">
+				  <div id="menu4" class="tab-pane fade">
 					<p>This is custom tab in static block.</p>
 				  </div>
 				 </div>
